SLING-1664 - try reading the repository.xml file from the Launchpad context
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/bundles/jcr/jackrabbit-server@988640 13f79535-47bb-0310-9956-ffa450edef68